[build-system]
requires = []
build-backend = "arn_build_backend"
backend-path = ["."]

[project]
name = "arn-v9"
version = "0.10.0"
description = "Adaptive Recall Network — local-first persistent memory for AI agents"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Mohamed Mohamed"}
]
keywords = ["ai", "agents", "memory", "embeddings", "cognitive", "neuroscience", "openclaw", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
    "sentence-transformers>=2.7",
    "psutil>=5.9",
    "httpx>=0.27",
    "sqlite-vec>=0.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/tuuhe99-del/ARN-Adaptive-Reasoning-Network"
Issues = "https://github.com/tuuhe99-del/ARN-Adaptive-Reasoning-Network/issues"

[project.scripts]
arn = "arn_v9.cli:main"

[tool.setuptools]
packages = [
    "arn_v9", "arn_v9.core", "arn_v9.storage",
    "arn_v9.api", "arn_v9.scripts", "arn_v9.tests", "arn_v9.benchmarks"
]

[tool.setuptools.package-data]
arn_v9 = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests", "arn_v9/tests"]
